# ImageProcessing

./: .gitignore  README.md
App/: App.sln
App/App/: App.cpp  App.vcxproj  App.vcxproj.filters  brightness.cpp  brightness.h  contrast.cpp  contrast.h  engine.cpp  engine.h  fliphorizontal.cpp  fliporizontal.h  flipvertical.cpp  flipvertical.h  help.cpp  help.h
App/App/x64/Debug/: App.exe.recipe  App.ilk  vc143.idb
App/App/x64/Debug/App.tlog/: App.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Application/: CMakeLists.txt
Application/cimg/: README.txt
Application/cimg/examples/: CMakeLists.txt
Application/program/src/: main.cpp
Application_1/: CMakeLists.txt
Application_1/program/: CMakeLists.txt
Application_1/program/src/: main.cpp
